--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -11,6 +11,7 @@ groups:
   - loggregator-benchmarks
   - loggregator-promotion
   - cf-syslog-drain-tests
+  - cf-syslog-cli-tests
   - cf-syslog-drain-bump-submodule
   - cf-syslog-drain-promotion
   - log-cache-tests
@@ -36,6 +37,7 @@ groups:
 - name: cf-syslog-drain
   jobs:
   - cf-syslog-drain-tests
+  - cf-syslog-cli-tests
   - cf-syslog-drain-bump-submodule
   - cf-deploy
   - cats
@@ -233,6 +235,13 @@ resources:
   type: git
   source:
     uri: git@github.com:cloudfoundry-incubator/log-cache-cli
+    branch: master
+    private_key: {{cf-loggregator-oauth-bot-key}}
+
+- name: cf-syslog-cli
+  type: git
+  source:
+    uri: git@github.com:cloudfoundry-incubator/cf-syslog-cli
     branch: master
     private_key: {{cf-loggregator-oauth-bot-key}}
 
@@ -914,6 +923,21 @@ jobs:
       source-repo: scalable-syslog
     params:
       IMPORT_PATH: code.cloudfoundry.org/scalable-syslog
+
+- name: cf-syslog-cli-tests
+  serial: true
+  public: true
+  plan:
+  - aggregate:
+    - get: loggregator-ci
+    - get: cf-syslog-cli
+      trigger: true
+  - task: run-tests
+    file: loggregator-ci/tasks/go-test-with-latest-packages/task.yml
+    input_mapping:
+      source-repo: cf-syslog-cli
+    params:
+      IMPORT_PATH: code.cloudfoundry.org/cf-syslog-cli
 
 - name: cf-syslog-drain-bump-submodule
   serial: true
