--- a/pipelines/playground.yml
+++ b/pipelines/playground.yml
@@ -212,6 +212,7 @@ jobs:
       SYSTEM_DOMAIN: playground.loggr.cf-app.com
       VARS_STORE_FILE: gcp/playground/deployment-vars.yml
       OPS_FILES: "scale-to-one-az.yml clients.yml allow-insecure-syslog-drains.yml cf-versions.yml use-bosh-dns.yml deploy-log-cache.yml enable-metrics-to-syslog.yml"
+      VARS_FILES: gcp/playground/datadog-vars.yml
   - task: bosh-cleanup
     file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
     params:
