--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -656,6 +656,7 @@ jobs:
           cp cf-deployment/operations/experimental/use-bosh-dns.yml ops-files/
           cp bbl-state/gcp/coconut-bbl/ops-files/*.yml ops-files/
           cp log-cache-release/manifests/operations/deploy-in-cf.yml ops-files/add-log-cache.yml
+          cp log-cache-release/manifests/operations/expvar-scraper.yml ops-files/log-cache-expvar-scraper.yml
 
           cat <<EOT >> ops-files/dev-versions.yml
           - type: replace
@@ -679,7 +680,7 @@ jobs:
       BBL_STATE_DIR: gcp/coconut-bbl
       SYSTEM_DOMAIN: coconut.cf-app.com
       VARS_STORE_FILE: gcp/coconut-bbl/deployment-vars.yml
-      OPS_FILES: "clients.yml scale-to-one-az.yml diego.yml dev-versions.yml windows-cell.yml add-log-cache.yml use-bosh-dns.yml datadog-agent.yml"
+      OPS_FILES: "clients.yml scale-to-one-az.yml diego.yml dev-versions.yml windows-cell.yml add-log-cache.yml use-bosh-dns.yml datadog-agent.yml log-cache-expvar-scraper.yml"
       VARS_FILES: "gcp/coconut-bbl/vars-files/router.yml"
   - task: enable-feature-flags
     file: cf-deployment-concourse-tasks/set-feature-flags/task.yml
