--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -681,7 +681,7 @@ jobs:
       SYSTEM_DOMAIN: coconut.cf-app.com
       VARS_STORE_FILE: gcp/coconut-bbl/deployment-vars.yml
       OPS_FILES: "clients.yml scale-to-one-az.yml diego.yml dev-versions.yml windows-cell.yml add-log-cache.yml use-bosh-dns.yml datadog-agent.yml log-cache-expvar-scraper.yml"
-      VARS_FILES: "gcp/coconut-bbl/vars-files/router.yml"
+      VARS_FILES: "gcp/coconut-bbl/vars-files/router.yml gcp/coconut-bbl/datadog-vars.yml"
   - task: enable-feature-flags
     file: cf-deployment-concourse-tasks/set-feature-flags/task.yml
     params:
