Give less control to loggregator-bench push
Signed-off-by: Andrew Poydence <apoydence@pivotal.io>

--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -818,7 +818,7 @@ jobs:
                 "manifests/loggregator-bench.yml"
             popd
 
-            rsync -ac deployments-loggregator/ updated-deployments-loggregator
+            rsync -ac deployments-loggregator/loggregator-bench-vars.yml updated-deployments-loggregator
   - task: commit
     file: loggregator-ci/tasks/commit/task.yml
     input_mapping:
