--- a/tasks/loggregator-bench/task.yml
+++ b/tasks/loggregator-bench/task.yml
@@ -3,6 +3,8 @@ image_resource:
   type: docker-image
   source:
     repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
+    tag: v3.19.0
+
 inputs:
 - name: deployments-loggregator
 - name: loggregator-ci
