Force create release in upload-release task
Signed-off-by: Brady Love <blove@pivotal.io>

--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -823,6 +823,7 @@ jobs:
       bosh-release-dir: bumped-loggregator-bench-release
     params:
       BBL_STATE_DIR: gcp/coconut-bbl
+      FORCE: true
   - task: deploy-benchmarks
     file: loggregator-ci/tasks/bosh-deploy/task.yml
     input_mapping:
