Trigger loggregator-deploy from logging-acceptance-tests
Signed-off-by: Andrew Poydence <apoydence@pivotal.io>

--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -717,6 +717,7 @@ jobs:
     - get: deployments-loggregator
     - get: loggregator-ci
     - get: logging-acceptance-tests-release
+      trigger: true
   - task: upload-loggregator
     config:
       image_resource:
