--- a/tasks/upload-release/task.yml
+++ b/tasks/upload-release/task.yml
@@ -7,8 +7,7 @@ caches:
 image_resource:
   type: docker-image
   source:
-    repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
-    tag: v3.19.0
+    repository: loggregator/base
 
 inputs:
 - name: loggregator-ci # - This repo
