--- a/pipelines/release.yml
+++ b/pipelines/release.yml
@@ -219,6 +219,21 @@ resources:
     branch: master
     private_key: {{cf-loggregator-oauth-bot-key}}
 
+- name: cf-syslog-cli
+  type: git
+  source:
+    uri: git@github.com:cloudfoundry-incubator/cf-syslog-cli
+    branch: master
+    private_key: {{cf-loggregator-oauth-bot-key}}
+
+- name: cf-syslog-cli-github-release-drafts
+  type: github-release
+  source:
+    user: cloudfoundry-incubator
+    repository: cf-syslog-cli
+    access_token: {{access-token}}
+    drafts: true
+
 jobs:
 - name: bump-golang
   serial: true
@@ -990,3 +1005,79 @@ jobs:
       body: github-release/body
       globs:
       - github-release/*.tgz
+
+- name: cf-syslog-cli
+  serial: true
+  plan:
+  - aggregate:
+    - get: cf-syslog-cli
+      trigger: false
+  - task: create-binaries
+    config:
+      image_resource:
+        type: docker-image
+        source:
+          repository: loggregator/base
+      platform: linux
+      params:
+        VERSION_MAJOR: 0
+        VERSION_MINOR: 1
+      inputs:
+      - name: cf-syslog-cli
+      outputs:
+      - name: output-repo
+      - name: github-release
+      run:
+        path: bash
+        args:
+          - -c
+          - |
+            #!/bin/bash
+            set -ex
+
+            # establish version/tag strings
+            version="{\"Major\":$VERSION_MAJOR,\"Minor\":$VERSION_MINOR}"
+            semver="v$VERSION_MAJOR.$VERSION_MINOR"
+
+            # write out github release files
+            echo "CF Syslog CLI $semver" > github-release/name
+            echo $semver> github-release/tag
+            echo "TBD" > github-release/body
+
+            # setup go path
+            cfsyslog=$PWD/cf-syslog-cli
+            mkdir -p go
+            pushd go
+              export GOPATH=$PWD
+              go get code.cloudfoundry.org/cf-syslog-cli
+              rm -rf src/code.cloudfoundry.org/cf-syslog-cli
+              cp -r $cfsyslog src/code.cloudfoundry.org/cf-syslog-cli
+            popd
+
+            # build binaries
+            mkdir -p github-release/builds
+            output=$PWD/github-release/builds
+            pushd $GOPATH/src/code.cloudfoundry.org/cf-syslog-cli
+              GOOS=linux go build -ldflags "-X main.version=$version" -o $output/cf-syslog-cli-linux
+              GOOS=darwin go build -ldflags "-X main.version=$version" -o $output/cf-syslog-cli-darwin
+              GOOS=windows go build -ldflags "-X main.version=$version" -o $output/cf-syslog-cli-windows
+            popd
+
+            pushd $cfsyslog
+              # add git tag
+              git config --global user.email "cf-loggregator@pivotal.io"
+              git config --global user.name "Loggregator CI"
+              git tag "$semver"
+            popd
+            cp -r $cfsyslog output-repo/
+  - put: cf-syslog-cli
+    params:
+      repository: output-repo/cf-syslog-cli
+      rebase: false
+  - put: cf-syslog-cli-github-release-drafts
+    params:
+      name: github-release/name
+      tag: github-release/tag
+      body: github-release/body
+      globs:
+      - github-release/builds/*
