--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -11,7 +11,7 @@ groups:
   - loggregator-benchmarks
   - loggregator-promotion
   - cf-syslog-drain-tests
-  - cf-syslog-cli-tests
+  - cf-drain-cli-tests
   - cf-syslog-drain-bump-submodule
   - cf-syslog-drain-promotion
   - log-cache-tests
@@ -37,7 +37,7 @@ groups:
 - name: cf-syslog-drain
   jobs:
   - cf-syslog-drain-tests
-  - cf-syslog-cli-tests
+  - cf-drain-cli-tests
   - cf-syslog-drain-bump-submodule
   - cf-deploy
   - cats
@@ -244,12 +244,11 @@ resources:
     branch: master
     private_key: {{cf-loggregator-oauth-bot-key}}
 
-- name: cf-syslog-cli
+- name: cf-drain-cli
   type: git
   source:
-    uri: git@github.com:cloudfoundry-incubator/cf-syslog-cli
+    uri: https://github.com/cloudfoundry-incubator/cf-drain-cli
     branch: master
-    private_key: {{cf-loggregator-oauth-bot-key}}
 
 - name: bosh-deployment
   type: git
@@ -961,20 +960,20 @@ jobs:
     params:
       IMPORT_PATH: code.cloudfoundry.org/scalable-syslog
 
-- name: cf-syslog-cli-tests
+- name: cf-drain-cli-tests
   serial: true
   public: true
   plan:
   - aggregate:
     - get: loggregator-ci
-    - get: cf-syslog-cli
+    - get: cf-drain-cli
       trigger: true
   - task: run-tests
     file: loggregator-ci/tasks/go-test-with-latest-packages/task.yml
     input_mapping:
-      source-repo: cf-syslog-cli
+      source-repo: cf-drain-cli
     params:
-      IMPORT_PATH: code.cloudfoundry.org/cf-syslog-cli
+      IMPORT_PATH: code.cloudfoundry.org/cf-drain-cli
 
 - name: cf-syslog-drain-bump-submodule
   serial: true
