Sets CATs nodes to 6 for coconut
Signed-off-by: Johanna Smith <josmith@pivotal.io>

--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -893,6 +893,7 @@ jobs:
       file: cats-concourse-task/task.yml
       params:
         CONFIG_FILE_PATH: gcp/coconut-bbl/cats-config.json
+        NODES: 6
 
 - name: lats
   serial: true
