Default SINK_DEPLOY to cf for backwards compatability
[#153033137]

Signed-off-by: Brady Love <blove@pivotal.io>

--- a/tasks/cf-syslog-drain-smoke-test-with-vars.yml
+++ b/tasks/cf-syslog-drain-smoke-test-with-vars.yml
@@ -13,6 +13,10 @@ params:
   CF_ORG:
   DATADOG_API_KEY:
   DRAIN_VERSION:
+  SINK_DEPLOY: "cf"
+  EXTERNAL_DRAIN_HOST:
+  EXTERNAL_DRAIN_PORT:
+  EXTERNAL_COUNTER_PORT:
   TEARDOWN: true
   JOB_NAME:
 run:
