--- a/tasks/cf-syslog-drain-smoke-test.yml
+++ b/tasks/cf-syslog-drain-smoke-test.yml
@@ -13,6 +13,10 @@ params:
   CF_ORG:
   DATADOG_API_KEY:
   DRAIN_VERSION:
+  SINK_DEPLOY: "cf"
+  EXTERNAL_DRAIN_HOST:
+  EXTERNAL_DRAIN_PORT:
+  EXTERNAL_COUNTER_PORT:
   TEARDOWN: true
   JOB_NAME:
 run:
