Allow uploading a release without rebase
Signed-off-by: Johanna Smith <josmith@pivotal.io>

--- a/tasks/upload-release/task.yml
+++ b/tasks/upload-release/task.yml
@@ -27,3 +27,7 @@ params:
   # - Optional
   # - Ignore dirty state of release repo.
   FORCE: false
+
+  # - Optional
+  # - Do not rebase the release after upload
+  NO_REBASE: false
