--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -663,7 +663,7 @@ jobs:
           cp log-cache-release/manifests/operations/deploy-in-cf.yml ops-files/add-log-cache.yml
           cp log-cache-release/manifests/operations/log-cache-instances.yml ops-files/
 
-          cat <<EOT >> ops-files/dev-versions.yml
+          cat <<EOT >> ops-files/on-the-fly.yml
           - type: replace
             path: /releases/name=loggregator
             value:
@@ -674,6 +674,9 @@ jobs:
             value:
               name: cf-syslog-drain
               version: latest
+          - type: replace
+            path: /instance_groups/name=doppler/instances
+            value: 2
           EOT
   - task: upload-stemcell
     file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-cf-deployment/task.yml
@@ -685,7 +688,7 @@ jobs:
       BBL_STATE_DIR: gcp/coconut-bbl
       SYSTEM_DOMAIN: coconut.cf-app.com
       VARS_STORE_FILE: gcp/coconut-bbl/deployment-vars.yml
-      OPS_FILES: "clients.yml scale-to-one-az.yml diego.yml dev-versions.yml windows-cell.yml add-log-cache.yml use-bosh-dns.yml datadog-agent.yml log-cache-instances.yml"
+      OPS_FILES: "clients.yml scale-to-one-az.yml diego.yml on-the-fly.yml windows-cell.yml add-log-cache.yml use-bosh-dns.yml datadog-agent.yml log-cache-instances.yml"
       VARS_FILES: "gcp/coconut-bbl/vars-files/router.yml gcp/coconut-bbl/datadog-vars.yml"
   - task: enable-feature-flags
     file: cf-deployment-concourse-tasks/set-feature-flags/task.yml
@@ -983,6 +986,8 @@ jobs:
     - get: cf-syslog-drain-release
       trigger: true
     - get: scalable-syslog
+      passed:
+      - cf-syslog-drain-tests
       trigger: true
       passed: ["cf-syslog-drain-tests"]
   - task: update-submodule
