--- a/tasks/log-cache-blackbox/task.yml
+++ b/tasks/log-cache-blackbox/task.yml
@@ -40,6 +40,10 @@ params:
   # - The CF space that the app is run in.
   SPACE:
 
+  # - Optional
+  # - Skip SSL validation when logging into CF.
+  SKIP_SSL_VALIDATION: false
+
   # - Required
   # - The username for CF login.
   USERNAME:
