Add support for skip ssl validation flag for datadog accumulator task
Signed-off-by: Johanna Smith <josmith@pivotal.io>

--- a/tasks/log-cache-datadog-accumulator/task.yml
+++ b/tasks/log-cache-datadog-accumulator/task.yml
@@ -35,6 +35,10 @@ params:
   # - The CF space that the app is run in.
   SPACE:
 
+  # - Optional
+  # - Skip SSL validation when logging into CF.
+  SKIP_SSL_VALIDATION:
+
   # - Required
   # - The username for CF login.
   USERNAME:
