--- a/pipelines/pws-us.yml
+++ b/pipelines/pws-us.yml
@@ -338,3 +338,39 @@ jobs:
       CLIENT_SECRET: {{pws-firehose-reliability-client-secret}}
       WORKER_INSTANCE_COUNT: 14
       APP_WS_PORT: 4443
+
+- name: log-cache
+  public: false
+  serial: true
+  plan:
+  - aggregate:
+    - get: loggregator-tools
+    - get: loggregator-ci
+    - get: 10m
+      trigger: true
+  - task: log-cache-blackbox-tests
+    file: loggregator-ci/tasks/log-cache-blackbox/task.yml
+    params:
+      APP_DOMAIN: "log-cache-blackbox.cfapps.io"
+      APP_NAME: "log-cache-blackbox"
+      SYSTEM_DOMAIN: "run.pivotal.io"
+      DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+      LOG_CACHE_ADDR: https://log-cache.run.pivotal.io
+      ORG: cf-lamb
+      SPACE: development
+      USERNAME: {{pws-username}}
+      PASSWORD: {{pws-password}}
+    timeout: 5m
+  - task: push-datadog-accumulator
+    file: loggregator-ci/tasks/log-cache-datadog-accumulator/task.yml
+    params:
+      APP_DOMAIN: "log-cache-blackbox.cfapps.io"
+      APP_NAME: "log-cache-data-dog-accumulator"
+      SYSTEM_DOMAIN: "run.pivotal.io"
+      DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+      LOG_CACHE_ADDR: http://log-cache.run.pivotal.io
+      ORG: cf-lamb
+      SPACE: development
+      USERNAME: {{pws-username}}
+      PASSWORD: {{pws-password}}
+    timeout: 5m
