--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -698,7 +698,16 @@ jobs:
       BBL_STATE_DIR: gcp/coconut-bbl
       SYSTEM_DOMAIN: coconut.cf-app.com
       VARS_STORE_FILE: gcp/coconut-bbl/deployment-vars.yml
-      OPS_FILES: "clients.yml scale-to-one-az.yml diego.yml on-the-fly.yml windows-cell.yml add-log-cache.yml use-bosh-dns.yml datadog-agent.yml log-cache-instances.yml"
+      OPS_FILES: |
+        clients.yml
+        scale-to-one-az.yml
+        diego.yml
+        on-the-fly.yml
+        windows-cell.yml
+        add-log-cache.yml
+        use-bosh-dns.yml
+        datadog-agent.yml
+        log-cache-instances.yml
       VARS_FILES: "gcp/coconut-bbl/vars-files/router.yml gcp/coconut-bbl/datadog-vars.yml"
   - task: enable-feature-flags
     file: cf-deployment-concourse-tasks/set-feature-flags/task.yml
